feat: adding produto endpoint
